# windmark

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  demo.ipynb  justfile  pyproject.toml  requirements.txt  sandbox.py
config/: config.yaml
config/data/: debug.yaml  plata.yaml  trxns-discrete.yaml  trxns-numeric.yaml  trxns.yaml
config/model/: base.yaml  check.yaml  debug.yaml  full.yaml  xsmall.yaml
docs/: README.md  diagnostics.md
docs/content/: motivations.typst  refs.bib  whitepaper.typst  works.bib
docs/site/: index.html  search.js
docs/site/source/core/: architecture.html
docs/whitepaper/: refs.bib  whitepaper.typ  whitepaper.typst
notebooks/: analysis.ipynb  balancer.ipynb  bug.ipynb  cleaning.ipynb  combination.ipynb  cuda.ipynb  digest.ipynb  dimensions.ipynb  evaluation.ipynb  iterops.ipynb  jitter.ipynb  managers.py  mocking.ipynb  mpire.ipynb  params.ipynb  plata.ipynb  playground.ipynb  registrar.ipynb  registrar.py  smoothen.ipynb  smoothing.ipynb  splitter.ipynb  temporal.ipynb  train.ipynb  trxns-discrete.ipynb  trxns.ipynb  visualization.ipynb
source/: main.py
source/core/: __init__.py  architecture.py  finetune.py  iterops.py  mock.py  schema.py  tensorclass.py  utils.py
source/pipelines/: workflow.py
source/tasks/: __init__.py  diagnose.py  digest.py  export.py  fieldreq.py  fit.py  manager.py  parameterize.py  parse.py  predict.py  preprocess.py  read.py  rebalance.py  sanitize.py  train.py
source/tests/: test_forward_pass.py
windmark/: __init__.py  __main__.py  main.py
windmark/components/: __init__.py  diagnose.py  digest.py  export.py  finetune.py  fit.py  lambdas.py  levels.py  manager.py  parse.py  predict.py  preprocess.py  pretrain.py  sample.py  sanitize.py  split.py  stash.py  system.py  task.py  utilities.py
windmark/config/: config.yaml
windmark/config/data/: debug.yaml  trxns.yaml
windmark/config/model/: base.yaml  check.yaml
windmark/core/: architecture.py  callbacks.py  complexity.py  constructs.py  data.py  iterops.py  managers.py  operators.py  orchestration.py  processors.py  samplers.py  schema.py  structs.py  utils.py  visualizations.py
windmark/core/architecture/: callbacks.py  custom.py  embedders.py  encoders.py  processors.py
windmark/core/constructs/: general.py  interface.py  managers.py  packages.py  tensorfields.py
windmark/core/data/: operators.py  processors.py  samplers.py
windmark/core/dev/: explorer.py  interface.py  registrar.py  visualizations.py
windmark/dev/: explorer.py
windmark/devtools/: explorer.py
windmark/orchestration/: context.py  environments.py
windmark/pipelines/: workflow.py
windmark/tasks/: __init__.py  compare.py  diagnose.py  digest.py  export.py  fan.py  finetune.py  fit.py  label.py  levels.py  manager.py  parse.py  predict.py  preprocess.py  pretrain.py  rebalance.py  sample.py  split.py  stash.py  system.py  task.py  utilities.py
windmark/tests/: test_forward_pass.py  test_special_tokens.py
windmark/workflows/: train.py
