[tool.poetry]
name = "windmark"
version = "0.1.0"
description = "Heterogenous Time Series Modeling"
authors = ["Windmark Labs <dev@windmark.ai>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "3.11.8"
# FIXME new version of flytekit is acting strange
flytekit = "1.10.7"
torch = "2.2.2"
lightning = "^2.1.3"
tensordict = "^0.3.0"
torchdata = "0.7.1"
jaxtyping = "^0.2.25"
beartype = "^0.17.0"
torchmetrics = "^1.3.2"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
onnx = "^1.16.0"
numpy = "^1.26.4"
polars = "^0.20.6"
pytdigest = "^0.1.4"
fastavro = "^1.9.4"
pyarrow = "^15.0.2"
pydantic = "^2.6.4"
rich = "^13.7.0"
faker = "^24.4.0"
humanize = "^4.9.0"
plotly = "^5.20.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
pyarmor = "^8.5.10"
hydra-core = "^1.3.2"

[tool.poetry.group.dev.dependencies]
semver = "^3.0.2"
pre-commit = "^3.6.1"
ipykernel = "^6.29.3"
ruff = "^0.1.15"
pysort = "^1.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
nbformat = "^5.10.3"
sphinx = "^7.2.6"
pyjust = "^1.18.1"
ipywidgets = "^8.1.2"

[tool.ruff]
lint.extend-ignore = ["F722"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
